Bug 33622 - Formatting Error in Rotated Cells
Summary: Formatting Error in Rotated Cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium minor
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords:
: 34600 37092 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-27 14:42 UTC by J William Cupp
Modified: 2011-05-11 01:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J William Cupp 2011-01-27 14:42:20 UTC

    
Comment 1 J William Cupp 2011-01-27 14:46:43 UTC
When using Calc if a spreadsheet cell is rotated 90 degrees (making the text run vertically), the alignment is not accurate when there is a misspelled word in the cell.  I have attendance sheets prepared for each course I teach and the column headers are names oriented for vertical text.  In all cells in which the names form regular words (e.g., Brown, Smith, etc.) the cells properly align horizontally centered and vertically middle.  However, many surnames do not pass the spell check.  These are underlined in red and not aligned properly.  If I add a particular surname to the spell check dictionary, the red underlining disappears and then the cell contents align properly.

I think it makes better sense to have alignment applied whether the word passes spell check or not.
Comment 2 Kohei Yoshida 2011-02-15 22:57:21 UTC
Reproduced.

Type something in a cell with a mis-spelled word, and set the angle to 90 degrees, and leave the automatic text-wrap off and the auto spell-check on, then the text disappears.

The workaround is to set the automatic text-wrap option on, then the content will be visible.
Comment 3 GerardF 2011-02-26 11:45:47 UTC
*** Bug 34600 has been marked as a duplicate of this bug. ***
Comment 4 Kohei Yoshida 2011-04-05 13:19:34 UTC
Ok.  This one was pretty tough, since the code that handles cell content alignment is oh so freaking complex!

But hopefully I fixed this in 3.4.
Comment 5 vitriol 2011-05-11 01:01:40 UTC
*** Bug 37092 has been marked as a duplicate of this bug. ***