Finally fixed vertical alignment issue. (fdo#33622)